[package]
name = "dir-tree"
version = "0.0.1"
license = "MIT"
edition = "2018"
exclude = ["index.node"]
description = "file tree"
repository = "https://github.com/MAE-BK201/directory-tree"

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
